--- a/cisco/inventory.ini
+++ b/cisco/inventory.ini
@@ -1,3 +1,3 @@
 [cisco]
-#home-lab-switch-01 ansible_host=192.168.0.251
+home-lab-switch-01 ansible_host=192.168.0.251
 home-lab-switch-02 ansible_host=192.168.0.250
